RESOLVED FIXED227318
REGRESSION(r278970): A CATransaction commitHandler should not execute a client callback
https://bugs.webkit.org/show_bug.cgi?id=227318
Summary REGRESSION(r278970): A CATransaction commitHandler should not execute a clien...
Said Abou-Hallawa
Reported 2021-06-23 14:31:28 PDT
Because the client callback may cause directly or indirectly another CATransaction commitHandler to be added which is prohibited by CA.
Attachments
Patch (2.39 KB, patch)
2021-06-23 14:55 PDT, Said Abou-Hallawa
thorton: review+
Patch (2.56 KB, patch)
2021-06-23 17:07 PDT, Said Abou-Hallawa
no flags
Said Abou-Hallawa
Comment 1 2021-06-23 14:49:48 PDT
Said Abou-Hallawa
Comment 2 2021-06-23 14:55:29 PDT
Tim Horton
Comment 3 2021-06-23 16:05:44 PDT
Comment on attachment 432093 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=432093&action=review > Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:1248 > + dispatch_async(dispatch_get_main_queue(), ^{ Likely better to use a lambda, like we do for addCommitHandler; replace the `^{` with `[callSnapshotRect = WTFMove(callSnapshotRect)] {`
Said Abou-Hallawa
Comment 4 2021-06-23 17:07:49 PDT
EWS
Comment 5 2021-06-23 22:27:39 PDT
Committed r279210 (239096@main): <https://commits.webkit.org/239096@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 432115 [details].
Note You need to log in before you can comment on or make changes to this bug.